<resources>
    <string name="app_name">RemNote</string>
    <string name="action_settings">Settings</string>
    <string name="add_countdown">添加倒计时</string>
    <string name="countdown_name">倒计时名称</string>
    <string name="countdown_time">倒计时时长</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="delete">删除</string>
</resources>
