<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_countdown_constraintLayout"
    android:layout_width="280dp"
    android:layout_height="500dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView_add_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_countdown"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/textView_countdown_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_countdown_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/textView_countdown_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editText_countdown_name"
        app:layout_constraintTop_toBottomOf="@+id/textView_add_countdown" />

    <EditText
        android:id="@+id/editText_countdown_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_countdown_name"
        app:layout_constraintLeft_toRightOf="@+id/textView_countdown_name"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView_countdown_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_time"
        android:textColor="@android:color/black"

        app:layout_constraintBottom_toTopOf="@+id/timePicker_countdown_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/editText_countdown_time"
        app:layout_constraintTop_toBottomOf="@+id/textView_countdown_name" />

    <EditText
        android:id="@+id/editText_countdown_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/textView_countdown_time"
        app:layout_constraintLeft_toRightOf="@id/textView_countdown_time"
        app:layout_constraintRight_toRightOf="parent" />

    <TimePicker
        android:id="@+id/timePicker_countdown_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#ffffff"
        android:scaleX="1"
        android:scaleY="1"
        android:timePickerMode="spinner"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_add_countdown_exit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_countdown_time" />

    <Button
        android:id="@+id/button_add_countdown_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_add_countdown"
        app:layout_constraintTop_toBottomOf="@+id/timePicker_countdown_time" />

    <Button
        android:id="@+id/button_add_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_add_countdown_exit"
        app:layout_constraintLeft_toRightOf="@id/button_add_countdown_exit"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>